8285303: riscv: Incorrect register mask in call_native_base

Co-authored-by: Dingli Zhang <dingli@iscas.ac.cn>
Reviewed-by: fyang, yadongwang